check switch html

--- a/odt.html
+++ b/odt.html
@@ -12,13 +12,15 @@
     <div id="home-page" class="bg">
         <img class="menuButton" src="./assets/media/SVG/menuButton.svg">
         <div class="container">
-            <img class="welcomeTitle centerX" src="./assets/media/SVG/welcomeHeadline.svg">
-            <!-- <div class="title centerX"><span class="yellow">WELCOME </span><span class="blue">TO </span> <span class="red">THE</span></div> -->
-            <!-- <div class="titleOdt centerX"><span class="yellow">Out </span> <span class="blue">Door </span> <span class="red">Training</span></div> -->
+            <img class="title centerX" src="./assets/media/SVG/welcomeHeadline.svg">
             <video class="centerX" width="320" height="240" controls>
                 <source src="./assets/media/video/welcome.mp4" type="video/mp4">
             </video>
-            <div class="text centerX">סדנאות בהן אנו יוצאים מהמרחב הסגור בו אנו רגילים ללמוד ולעבוד, אל המרחבים הפתוחים שבאמצעותם ניתן לפתח כישורי מנהיגות ועבודת צוות באמצעות פעילויות בשטח.<br>המשתתפים לוקחים חלק בפעילויות השונות בסיוע מדריך או יועץ, שמאפשר להם לעבד את חוויותיהם ומסייע להם לבצע העברה של הידע והכישורים שפיתחו בהקשר עבודתם.</div>
+            <div class="text textHomePage centerX">
+                <img class="questionMark" src="./assets/media/SVG/questionMark.svg">
+                <div>
+                    סדנאות בהן אנו יוצאים מהמרחב הסגור בו אנו רגילים ללמוד ולעבוד, אל המרחבים הפתוחים שבאמצעותם ניתן לפתח כישורי מנהיגות ועבודת צוות באמצעות פעילויות בשטח.<br>המשתתפים לוקחים חלק בפעילויות השונות בסיוע מדריך או יועץ, שמאפשר להם לעבד את חוויותיהם ומסייע להם לבצע העברה של הידע והכישורים שפיתחו בהקשר עבודתם.</div>
+                </div>
             <img class="mapButton centerX" src="./assets/media/SVG/mapButton.svg">
         </div>
     </div>
@@ -27,21 +29,20 @@
     <div id="map-page" class="hidden">
         <div class="container">
             <img class="exitButton" src="./assets/media/SVG/exitButton.svg">
-            <div class="title centerX">מפת המתחם</div>
-            <div class="titleOdt centerX"><span class="yellow">Out </span> <span class="blue">Door </span> <span class="red">Training</span></div>
+            <img class="title centerX" src="./assets/media/SVG/mapHeadline.svg">
             <div id="map">
-                <div class="station xAndYStation"></div>
+                <div class="station xAndY xAndYStation"></div>
+                <div class="station keyboard keyboardStation"></div>
+                <div class="station blind blindStation"></div>
+                <div class="station hand handStation"></div>
+                <div class="station raft raftStation"></div>
+                <div class="station spider spiderStation"></div>
+                <div class="station spiral spiralStation"></div>
+                <!-- <div class="station welcomeStation"></div>
+                <div class="station safetyStation"></div>
                 <div class="station ProcessingStation ProcessingStation1"></div>
                 <div class="station ProcessingStation ProcessingStation2"></div>
-                <div class="station ProcessingStation ProcessingStation3"></div>
-                <div class="station keyboardStation"></div>
-                <div class="station blindStation"></div>
-                <div class="station handStation"></div>
-                <div class="station raftStation"></div>
-                <div class="station spiderStation"></div>
-                <div class="station spiralStation"></div>
-                <div class="station welcomeStation"></div>
-                <div class="station safetyStation"></div>
+                <div class="station ProcessingStation ProcessingStation3"></div> -->
             </div>
         </div>
     </div>
