check switch html

--- a/xAndY.html
+++ b/xAndY.html
@@ -19,6 +19,10 @@
             </video>
             <div class="text centerX">
                 <div class="stationTitle">תיאור הפעילות</div>
+                <ol>
+                    <li>בכל סיבוב (סה”כ 7) המשתתפים יכולים להתייעץ חצי דקה ואז עליהם להציג את הבחירה שלהם באותו הזמן.</li>
+                    <li>הצוות מרוויח או מפסיד ניקוד בהתאם לטבלה הבאה (טבלת הניקוד וטבלה לתיעוד הניקוד קיימות פיזית בתחנה).</li>
+                </ol>
         </div>
     </div>
 </body>
