--- a/xAndY.html
+++ b/xAndY.html
@@ -23,6 +23,8 @@
                     <li>בכל סיבוב (סה”כ 7) המשתתפים יכולים להתייעץ חצי דקה ואז עליהם להציג את הבחירה שלהם באותו הזמן.</li>
                     <li>הצוות מרוויח או מפסיד ניקוד בהתאם לטבלה הבאה (טבלת הניקוד וטבלה לתיעוד הניקוד קיימות פיזית בתחנה).</li>
                 </ol>
+                <img src="./assets/media/SVG/xAndYTable.svg">
+            </div>
         </div>
     </div>
 </body>
