--- a/odt.html
+++ b/odt.html
@@ -8,6 +8,19 @@
     <title>odt</title>
 </head>
 <body>
+    <!-- menu -->
+    <div class="menuPage hidden">
+        <img class="exitMenuButton" src="./assets/media/SVG/exitButton.svg">
+        <div class="station odt yellowBg menuBg">דף הבית</div>
+        <div class="mapButton home-page blueBg menuBg">מפת המתחם</div>
+        <div class="station spider redBg menuBg">קורי עכביש</div>
+        <div class="station blind yellowBg menuBg">הולכת עיוור</div>
+        <div class="station keyboard blueBg menuBg">מקלדת</div>
+        <div class="station spiral redBg menuBg">ספירלה</div>
+        <div class="station xAndY yellowBg menuBg">Y & X</div>
+        <div class="station raft blueBg menuBg">רפסודה</div>
+        <div class="station hand redBg menuBg">יד ביד</div>
+    </div>
     <!-- home -->
     <div id="home-page" class="bg">
         <img class="menuButton" src="./assets/media/SVG/menuButton.svg">
@@ -16,12 +29,12 @@
             <video class="centerX" width="320" height="240" controls>
                 <source src="./assets/media/video/welcome.mp4" type="video/mp4">
             </video>
-            <div class="text textHomePage centerX">
+            <div class="textHomePage centerX">
                 <img class="questionMark" src="./assets/media/SVG/questionMark.svg">
                 <div>
                     סדנאות בהן אנו יוצאים מהמרחב הסגור בו אנו רגילים ללמוד ולעבוד, אל המרחבים הפתוחים שבאמצעותם ניתן לפתח כישורי מנהיגות ועבודת צוות באמצעות פעילויות בשטח.<br>המשתתפים לוקחים חלק בפעילויות השונות בסיוע מדריך או יועץ, שמאפשר להם לעבד את חוויותיהם ומסייע להם לבצע העברה של הידע והכישורים שפיתחו בהקשר עבודתם.</div>
                 </div>
-            <img class="mapButton centerX" src="./assets/media/SVG/mapButton.svg">
+            <img class="mapButton home-page centerX" src="./assets/media/SVG/mapButton.svg">
         </div>
     </div>
 
@@ -38,11 +51,6 @@
                 <div class="station raft raftStation"></div>
                 <div class="station spider spiderStation"></div>
                 <div class="station spiral spiralStation"></div>
-                <!-- <div class="station welcomeStation"></div>
-                <div class="station safetyStation"></div>
-                <div class="station ProcessingStation ProcessingStation1"></div>
-                <div class="station ProcessingStation ProcessingStation2"></div>
-                <div class="station ProcessingStation ProcessingStation3"></div> -->
             </div>
         </div>
     </div>
