change css to vw from vh

--- a/odt.html
+++ b/odt.html
@@ -22,7 +22,7 @@
         <div class="station hand redBg menuBg">יד ביד</div>
     </div>
     <!-- home -->
-    <div id="home-page" class="bg">
+    <div id="home-page" class="">
         <img class="menuButton" src="./assets/media/SVG/menuButton.svg">
         <div class="container">
             <img class="title centerX" src="./assets/media/SVG/welcomeHeadline.svg">
