--- a/odt.html
+++ b/odt.html
@@ -11,15 +11,15 @@
     <!-- menu -->
     <div class="menuPage hidden">
         <img class="exitMenuButton" src="./assets/media/SVG/exitButton.svg">
-        <div class="station odt yellowBg menuBg">דף הבית</div>
-        <div class="mapButton home-page blueBg menuBg">מפת המתחם</div>
-        <div class="station spider redBg menuBg">קורי עכביש</div>
-        <div class="station blind yellowBg menuBg">הולכת עיוור</div>
-        <div class="station keyboard blueBg menuBg">מקלדת</div>
-        <div class="station spiral redBg menuBg">ספירלה</div>
-        <div class="station xAndY yellowBg menuBg">Y & X</div>
-        <div class="station raft blueBg menuBg">רפסודה</div>
-        <div class="station hand redBg menuBg">יד ביד</div>
+        <div class="station odt  menuBg">דף הבית</div>
+        <div class="mapButton home-page  menuBg">מפת המתחם</div>
+        <div class="station spider  menuBg">קורי עכביש</div>
+        <div class="station blind  menuBg">הולכת עיוור</div>
+        <div class="station keyboard  menuBg">מקלדת</div>
+        <div class="station spiral  menuBg">ספירלה</div>
+        <div class="station xAndY  menuBg">Y & X</div>
+        <div class="station raft  menuBg">רפסודה</div>
+        <div class="station hand  menuBg">יד ביד</div>
     </div>
     <!-- home -->
     <div id="home-page" class="">
