--- a/odt.html
+++ b/odt.html
@@ -46,7 +46,8 @@
             <div id="map">
                 <div class="station xAndY xAndYStation"></div>
                 <div class="station keyboard keyboardStation"></div>
-                <div class="station blind blindStation"></div>
+                <div class="station blind blindStation blindStation1"></div>
+                <div class="station blind blindStation blindStation2"></div>
                 <div class="station hand handStation"></div>
                 <div class="station raft raftStation"></div>
                 <div class="station spider spiderStation"></div>
