--- a/blind.html
+++ b/blind.html
@@ -39,6 +39,10 @@
                 <div class="station spider spiderStation"></div>
                 <div class="station spiral spiralStation"></div>
             </div>
+            <div class="mapInstractions centerX">
+                <img class="blueSqure" src="./assets/media/SVG/blueBg.svg" alt="blue">
+                 - לחצו על הריבועים בצבע תכלת למידע על התחנות
+            </div>
         </div>
     </div>
 
@@ -149,6 +153,8 @@
                     </li>
                 </ul>
             </div>
+            <img class="mapButton blindPage mapButtonStation centerX" src="./assets/media/SVG/mapButton.svg">
+
         </div>
     </div>
 </body>
