--- a/odt.html
+++ b/odt.html
@@ -30,11 +30,16 @@
                 <source src="./assets/media/video/welcome.mp4" type="video/mp4">
             </video>
             <div class="textHomePage centerX">
+                <div> מה הן סדנאות הOdt</div>
                 <img class="questionMark" src="./assets/media/SVG/questionMark.svg">
-                <div>
-                    סדנאות בהן אנו יוצאים מהמרחב הסגור בו אנו רגילים ללמוד ולעבוד, אל המרחבים הפתוחים שבאמצעותם ניתן לפתח כישורי מנהיגות ועבודת צוות באמצעות פעילויות בשטח.<br>המשתתפים לוקחים חלק בפעילויות השונות בסיוע מדריך או יועץ, שמאפשר להם לעבד את חוויותיהם ומסייע להם לבצע העברה של הידע והכישורים שפיתחו בהקשר עבודתם.</div>
-                </div>
-            <img class="mapButton home-page centerX" src="./assets/media/SVG/mapButton.svg">
+            </div>
+            <div class="mainPageText centerX">
+                סדנאות בהן אנו יוצאים מהמרחב הסגור בו אנו רגילים ללמוד ולעבוד, אל המרחבים הפתוחים שבאמצעותם ניתן לפתח כישורי מנהיגות ועבודת צוות באמצעות פעילויות בשטח.<br>המשתתפים לוקחים חלק בפעילויות השונות בסיוע מדריך או יועץ, שמאפשר להם לעבד את חוויותיהם ומסייע להם לבצע העברה של הידע והכישורים שפיתחו בהקשר עבודתם.
+            </div>
+            <div class="mapButtonContainer centerX">
+                <img class="mapButton home-page centerX" src="./assets/media/SVG/mapButton.svg">
+                <div>מפת המתחם</div>
+            </div>
         </div>
     </div>
 
@@ -52,6 +57,10 @@
                 <div class="station raft raftStation"></div>
                 <div class="station spider spiderStation"></div>
                 <div class="station spiral spiralStation"></div>
+            </div>
+            <div class="mapInstractions centerX">
+                <img class="blueSqure" src="./assets/media/SVG/blueBg.svg" alt="blue">
+                 - לחצו על הריבועים בצבע תכלת למידע על התחנות
             </div>
         </div>
     </div>
