--- a/raft.html
+++ b/raft.html
@@ -38,6 +38,10 @@
                 <div class="station spider spiderStation"></div>
                 <div class="station spiral spiralStation"></div>
             </div>
+            <div class="mapInstractions centerX">
+                <img class="blueSqure" src="./assets/media/SVG/blueBg.svg" alt="blue">
+                 - לחצו על הריבועים בצבע תכלת למידע על התחנות
+            </div>
         </div>
     </div>
 
@@ -125,6 +129,8 @@
                     </li>
                 </ul>
             </div>
+            <img class="mapButton raftPage mapButtonStation centerX" src="./assets/media/SVG/mapButton.svg">
+
         </div>
     </div>
 </body>
