--- a/odt.html
+++ b/odt.html
@@ -20,6 +20,7 @@
         <div class="station xAndY  menuBg">Y & X</div>
         <div class="station raft  menuBg">רפסודה</div>
         <div class="station hand  menuBg">יד ביד</div>
+        <div class="station processing  menuBg">תחנת עיבוד</div>
     </div>
     <!-- home -->
     <div id="home-page" class="">
