add processing btn🎂

--- a/blind.html
+++ b/blind.html
@@ -22,6 +22,7 @@
         <div class="station xAndY  menuBg">Y & X</div>
         <div class="station raft  menuBg">רפסודה</div>
         <div class="station hand  menuBg">יד ביד</div>
+        <div class="station processing  menuBg">תחנת עיבוד</div>
     </div>
 
     <!-- map -->
