--- a/keyboard.html
+++ b/keyboard.html
@@ -13,7 +13,7 @@
     <div class="menuPage hidden">
         <img class="exitMenuButton" src="./assets/media/SVG/exitButton.svg">
         <div class="station odt  menuBg">דף הבית</div>
-        <div class="mapButton keyboardPage  menuBg">מפת המתחם</div>
+        <div class="mapButton blindPage  menuBg">מפת המתחם</div>
         <div class="station spider  menuBg">קורי עכביש</div>
         <div class="station blind  menuBg">הולכת עיוור</div>
         <div class="station keyboard  menuBg">מקלדת</div>
@@ -21,6 +21,7 @@
         <div class="station xAndY  menuBg">Y & X</div>
         <div class="station raft  menuBg">רפסודה</div>
         <div class="station hand  menuBg">יד ביד</div>
+        <div class="station processing  menuBg">תחנת עיבוד</div>
     </div>
 
     <!-- map -->
