--- a/processing.html
+++ b/processing.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,23 @@
     <script src="odt.js"></script>
     <title>Processing</title>
 </head>
+
 <body>
-   <div>בקרוב...</div>
+    <!-- menu -->
+    <div class="menuPage hidden">
+        <img class="exitMenuButton" src="./assets/media/SVG/exitButton.svg">
+        <div class="station odt  menuBg">דף הבית</div>
+        <div class="mapButton blindPage  menuBg">מפת המתחם</div>
+        <div class="station spider  menuBg">קורי עכביש</div>
+        <div class="station blind  menuBg">הולכת עיוור</div>
+        <div class="station keyboard  menuBg">מקלדת</div>
+        <div class="station spiral  menuBg">ספירלה</div>
+        <div class="station xAndY  menuBg">Y & X</div>
+        <div class="station raft  menuBg">רפסודה</div>
+        <div class="station hand  menuBg">יד ביד</div>
+        <div class="station processing  menuBg">תחנת עיבוד</div>
+    </div>
+    <div>בקרוב...</div>
 </body>
+
 </html>
