--- a/raft.html
+++ b/raft.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,12 +9,13 @@
     <script src="odt.js"></script>
     <title>raft</title>
 </head>
+
 <body>
     <!-- menu -->
     <div class="menuPage hidden">
         <img class="exitMenuButton" src="./assets/media/SVG/exitButton.svg">
         <div class="station odt  menuBg">דף הבית</div>
-        <div class="mapButton raftPage  menuBg">מפת המתחם</div>
+        <div class="mapButton blindPage  menuBg">מפת המתחם</div>
         <div class="station spider  menuBg">קורי עכביש</div>
         <div class="station blind  menuBg">הולכת עיוור</div>
         <div class="station keyboard  menuBg">מקלדת</div>
@@ -21,6 +23,7 @@
         <div class="station xAndY  menuBg">Y & X</div>
         <div class="station raft  menuBg">רפסודה</div>
         <div class="station hand  menuBg">יד ביד</div>
+        <div class="station processing  menuBg">תחנת עיבוד</div>
     </div>
 
     <!-- map -->
@@ -40,7 +43,7 @@
             </div>
             <div class="mapInstractions centerX">
                 <img class="blueSqure" src="./assets/media/SVG/blueBg.svg" alt="blue">
-                 - לחצו על הריבועים בצבע תכלת למידע על התחנות
+                - לחצו על הריבועים בצבע תכלת למידע על התחנות
             </div>
         </div>
     </div>
@@ -72,7 +75,8 @@
                 <div class="stationTitle">שלבי הפעילות-</div>
                 <div class="yellow">שלב 1 - הסבר על התחנה מצד המדריך</div>
                 <div>
-                    אמור למשתתפים - המטרה שלכם היא לעמוד על הרפסודה ולייצר יציבות שלה למשך 30 שניות. הסבר למשתתפים שעל כולם לעמוד בו זמנית על המתקן. חל איסור על המשתתפים לגעת באדמה בשום צורה שהיא.
+                    אמור למשתתפים - המטרה שלכם היא לעמוד על הרפסודה ולייצר יציבות שלה למשך 30 שניות. הסבר למשתתפים שעל
+                    כולם לעמוד בו זמנית על המתקן. חל איסור על המשתתפים לגעת באדמה בשום צורה שהיא.
                     <br>כ – 5 דקות
                 </div>
                 <div class="blue">שלב 2 - זמן תכנון</div>
@@ -118,13 +122,13 @@
                             <br>- איך השפיע התכנון על ביצוע המשימה, לעומת הסיבוב ללא זמן התכנון?
                             <br>- האם היה מנהיג בפעילות?
                             <br>הבא דוגמאות מהנתונים שאספת במהלך הסדנא - אמירות שנאמרו.
-                            <br>הבא דוגמאות אישיות ודילמות פיקודיות מתפקידך כמפקד שקשורות לעבודת צוות.                            
+                            <br>הבא דוגמאות אישיות ודילמות פיקודיות מתפקידך כמפקד שקשורות לעבודת צוות.
                         </div>
                     </li>
                     <li>
                         <div class="bold">סיכום</div>
                         <div>
-                            שאל את הצוות - מה התחדד לכם ליום יום שלכם בעקבות הפעילות?              
+                            שאל את הצוות - מה התחדד לכם ליום יום שלכם בעקבות הפעילות?
                         </div>
                     </li>
                 </ul>
@@ -134,4 +138,5 @@
         </div>
     </div>
 </body>
+
 </html>
