--- a/processing.html
+++ b/processing.html
@@ -25,7 +25,38 @@
         <div class="station hand  menuBg">יד ביד</div>
         <div class="station processing  menuBg">תחנת עיבוד</div>
     </div>
-    <div>בקרוב...</div>
+
+    <!-- map -->
+    <div id="map-page" class="hidden">
+        <div class="container">
+            <img class="exitButton" src="./assets/media/SVG/exitButton.svg">
+            <img class="title centerX" src="./assets/media/SVG/mapHeadline.svg">
+            <div id="map">
+                <div class="station xAndY xAndYStation"></div>
+                <div class="station keyboard keyboardStation"></div>
+                <div class="station blind blindStation blindStation1"></div>
+                <div class="station blind blindStation blindStation2"></div>
+                <div class="station hand handStation"></div>
+                <div class="station raft raftStation"></div>
+                <div class="station spider spiderStation"></div>
+                <div class="station spiral spiralStation"></div>
+            </div>
+            <div class="mapInstractions centerX">
+                <img class="blueSqure" src="./assets/media/SVG/blueBg.svg" alt="blue">
+                - לחצו על הריבועים בצבע תכלת למידע על התחנות
+            </div>
+        </div>
+    </div>
+    <div id="processingPage" class="">
+        <img class="menuButton" src="./assets/media/SVG/menuButton.svg">
+        <div class="container">
+            <img class="title centerX" src="./assets/media/SVG/handHeadline.svg">
+            
+            </div>
+            <img class="mapButton handPage mapButtonStation centerX" src="./assets/media/SVG/mapButton.svg">
+
+        </div>
+    </div>
 </body>
 
 </html>
