--- a/processing.html
+++ b/processing.html
@@ -53,7 +53,7 @@
             <img class="title centerX" src="./assets/media/SVG/handHeadline.svg">
             
             </div>
-            <img class="mapButton handPage mapButtonStation centerX" src="./assets/media/SVG/mapButton.svg">
+            <img class="mapButton processingPage mapButtonStation centerX" src="./assets/media/SVG/mapButton.svg">
 
         </div>
     </div>
