--- a/processing.html
+++ b/processing.html
@@ -39,18 +39,21 @@
                 <div class="station hand handStation"></div>
                 <div class="station raft raftStation"></div>
                 <div class="station spider spiderStation"></div>
-                <div class="station spiral spiralStation"></div>
+                <div class="station processing processingStation1"></div>
+                <div class="station processing processingStation2"></div>
+                <div class="station processing processingStation3"></div>
             </div>
             <div class="mapInstractions centerX">
                 <img class="blueSqure" src="./assets/media/SVG/blueBg.svg" alt="blue">
-                - לחצו על הריבועים בצבע תכלת למידע על התחנות
+                 - לחצו על הריבועים בצבע תכלת למידע על התחנות
             </div>
         </div>
     </div>
+
     <div id="processingPage" class="">
         <img class="menuButton" src="./assets/media/SVG/menuButton.svg">
         <div class="container">
-            <img class="title centerX" src="./assets/media/SVG/handHeadline.svg">
+            <img class="title centerX" src="./assets/media/SVG/processHeadline.png">
             
             </div>
             <img class="mapButton processingPage mapButtonStation centerX" src="./assets/media/SVG/mapButton.svg">
