--- a/raft.html
+++ b/raft.html
@@ -40,6 +40,9 @@
                 <div class="station raft raftStation"></div>
                 <div class="station spider spiderStation"></div>
                 <div class="station spiral spiralStation"></div>
+                <div class="station processing processingStation1"></div>
+                <div class="station processing processingStation2"></div>
+                <div class="station processing processingStation3"></div>
             </div>
             <div class="mapInstractions centerX">
                 <img class="blueSqure" src="./assets/media/SVG/blueBg.svg" alt="blue">
