hadar added questions to process page

--- a/processing.html
+++ b/processing.html
@@ -54,7 +54,36 @@
         <img class="menuButton" src="./assets/media/SVG/menuButton.svg">
         <div class="container">
             <img class="title centerX" src="./assets/media/SVG/processHeadline.png">
-            
+                <div class="text-no-video centerX">
+                    <div>תחנת העיבוד מווה הזדמנות לחשוב בנחת על העשייה במתחם ולחשוב על הדומה והשונה בין העשייה במתחם לבין העשייה היומיומית.</div>
+                    <div>להלן מאגר שאלות שיכול לסייע בעיבוד של התחנות השונות.</div>
+                    <div>ניתן לבחור חלק מהשאלות, במיוחד את אלו שרלוונטיות לאופי הצוות או לסוגיות שמעסיקות את הצוות.</div>
+                    <ol>
+                        <li>האם היה תכנון במשחק? (תכנון או ״קפיצה למשימה״).</li>
+                        <li>מי השתתף ומי לא השתתף?</li>
+                        <li>איך היה שיתוף הפעולה בתוך הקבוצה?</li>
+                        <li>האם היו אנשים בקבוצה שלקחו על עצמם תפקיד (מתכנן / מנהיג וכדומה)?</li>
+                        <li>האם הקבוצה הקפידה על מילוי החוקים?</li>
+                        <li>האם היה שיפור מהתנסות להתנסות? - הפקת לקחים.</li>
+                        <li>מה דעתך על עבודת הצוות בקבוצה?
+                            <ul>
+                                <li>באופן כללי?</li>
+                                <li>בחיבור למטרה?</li>
+                                <li>בתלות הדדית בין חברי.ות הצוות?</li>
+                            </ul>
+                        </li>
+                        <li>האם הגדרת התפקיד הייתה ברורה?</li>
+                        <li>האם חשבו מראש על קשיים אפשריים?</li>
+                        <li>איך תראה / נראתה המשימה כאשר יש / היה מנהל - וכאשר אין?</li>
+                        <li>מה היה ההבדל בין ביצועים שונים?</li>
+                        <li>מה הייתה החוזקה שלכם כצוות?</li>
+                        <li>מה הייתה החולשה שלכם כצוות?</li>
+                        <li>מה אתם לוקחים איתכם מהפעילות לעבודה היומיומית?</li>
+                        <li>איך הצוות מתמודד עם הצלחה / אי הצלחת המשימה?</li>
+                        <li>במה העבודה המשותפת בתחנה, דומה לעבודה שלכם ביום ביום?</li>
+                        <li>מה לקחת איתך מהתחנה לעבודה ביום יום?</li>
+                    </ol>
+                </div>
             </div>
             <img class="mapButton processingPage mapButtonStation centerX" src="./assets/media/SVG/mapButton.svg">
 
